# tomcat-native

./: .asf.yaml  .classpath  .gitignore  .project  CMakeLists.txt  HOWTO-RELEASE.txt  KEYS  LICENSE  NOTICE  README.txt  RELEASE-NOTES.txt  TODO.txt  TOMCAT-NATIVE-NEXT.txt  build.properties.default  build.xml  copylibs_deps.sh  download_deps.sh  gump.xml  jnirelease.sh  pom.xml
jk/native/: .cvsignore  BUILDING  BUILDING.txt  CHANGES.txt  Makefile.am  Makefile.in  Makefile.libdir  Makefile.tmpl  NOTICE  README  README.configure  README.txt  STATUS.txt  TODO  TODO.txt  build.properties.sample  build.xml  buildconf  buildconf.sh  configure.in
jk/native/apache-1.3/: .cvsignore  Makefile.am  Makefile.apxs.in  Makefile.freebsd  Makefile.in  Makefile.linux  Makefile.netware  Makefile.nw  Makefile.tmpl  Makefile.vc  NWGNUmakefile  NWGNUmakefile.mak  README.hpux  README.solaris  build-hpux-cc.sh  build-hpux.sh  build-solaris.sh  build-unix.sh  libjk.module  list.mk  mod_jk.c  mod_jk.dsp  mod_jk.exp
jk/native/apache-2.0/: .cvsignore  Makefile.apxs.in  Makefile.in  Makefile.linux  Makefile.vc  NWGNUmakefile  bldjk.qclsrc  bldjk.qcsrc  bldjk54.qclsrc  build-unix.sh  config.m4  install-unix.sh  mod_jk.c  mod_jk.dsp
jk/native/common/: .cvsignore  .indent.pro  Makefile.in  ap_snprintf.c  ap_snprintf.h  jk_ajp12_worker.c  jk_ajp12_worker.h  jk_ajp13.c  jk_ajp13.h  jk_ajp13_worker.c  jk_ajp13_worker.h  jk_ajp14.c  jk_ajp14.h  jk_ajp14_worker.c  jk_ajp14_worker.h  jk_ajp_common.c  jk_ajp_common.h  jk_channel.h  jk_channel_socket.c  jk_connect.c  jk_connect.h  jk_context.c  jk_context.h  jk_endpoint.h  jk_env.c  jk_env.h  jk_global.h  jk_global.h.in  jk_handler_discovery.c  jk_handler_logon.c  jk_jni_worker.c  jk_jni_worker.h  jk_lb_worker.c  jk_lb_worker.h  jk_logger.c  jk_logger.h  jk_map.c  jk_map.h  jk_md5.c  jk_md5.h  (+30 more)
jk/native/domino/: HISTORY  Makefile  config.h  dsapi.dsp  dsapi.dsw  dsapifilter.h  inifile.c  inifile.h  jk_dsapi_plugin.c  mkini.sh  tomcat_redirector.reg
jk/native/iis/: Makefile.amd64  Makefile.ia64  Makefile.vc  Makefile.x86  README  isapi.def  isapi.dsp  isapi.dsw  isapi.mak  isapi_install.vbs  isapi_redirect.rc  isapi_redirect.reg  jk_isapi_plugin.c
jk/native/isapi/: README.txt  config.h  inifile.c  inifile.h  isapi.dsp  isapi.dsw  jk_isapi_plugin.c  poolbuf.c  poolbuf.h  tomcat_redirector.reg
jk/native/jni/: Makefile.in  Makefile.linux  Makefile.netware  Makefile.nw  Makefile.solaris  jk_jnicb.c  jk_jnicb.exp  jk_jnicb.h  jni_connect.dsp  jni_connect.dsw
jk/native/netscape/: Makefile.linux  Makefile.netware  Makefile.nw  Makefile.solaris  README  jk_nsapi_plugin.c  nsapi.dsp  nsapi.dsw
jk/native/nt_service/: jk_nt_service.c  nt_service.dsp
jk/native2/: .indent.pro  BUILD.txt  CHANGES.html  CHANGES.txt  INSTALL.txt  Makefile.in  README.txt  STATUS.txt  build.xml  buildconf.sh  configure.in
jk/native2/common/: Makefile.in  jk_ajp14.c  jk_ajp14.h  jk_ajp14_worker.c  jk_ajp_common.c  jk_ajp_common.h  jk_channel.c  jk_channel_apr_socket.c  jk_channel_jni.c  jk_channel_socket.c  jk_channel_un.c  jk_config.c  jk_config_file.c  jk_connect.h  jk_endpoint.c  jk_endpoint.h  jk_env.c  jk_handler_discovery.c  jk_handler_logon.c  jk_handler_request.c  jk_handler_response.c  jk_handler_shutdown.c  jk_jni_worker.c  jk_lb_worker.c  jk_logger.c  jk_logger_file.c  jk_logger_win32.c  jk_logger_win32_message.mc  jk_map.c  jk_md5.c  jk_msg_ajp.c  jk_msg_buff.c  jk_msg_buff.h  jk_mutex.c  jk_mutex_proc.c  jk_mutex_thread.c  jk_nwmain.c  jk_objCache.c  jk_pool.c  jk_pool_apr.c  (+19 more)
jk/native2/include/: jk_bean.h  jk_channel.h  jk_config.h  jk_endpoint.h  jk_env.h  jk_global.h  jk_handler.h  jk_logger.h  jk_map.h  jk_md5.h  jk_msg.h  jk_mutex.h  jk_objCache.h  jk_pool.h  jk_requtil.h  jk_service.h  jk_shm.h  jk_uriEnv.h  jk_uriMap.h  jk_vm.h  jk_webapp.h  jk_worker.h  jk_workerEnv.h
jk/native2/jni/: Makefile.in  jk_channeljni_native.c  jk_jni_aprImpl.c  jk_jnicb.c  jk_jnicb.exp  (+2 more)
webapp/: .cvsignore  CHANGES  DETAILS.txt.in  INSTALL.txt  LICENSE.txt  Makedefs.in  Makedefs.orig  Makefile  Makefile.in  Makefile.win  README.txt  WIN32.txt  build.properties.in  build.properties.sample  build.xml  buildconf.sh  configure  configure.in
webapp/apache-1.3/: .cvsignore  Makefile  Makefile.in  Makefile.win  mod_webapp.c  mod_webapp.dsp
webapp/apache-2.0/: .cvsignore  Makefile.in  mod_webapp.c
webapp/docs/: apache-1.3.html  build-u.html  building.xml  connection.ai  cvs.xml  faq.xml  index.html  index.xml  license.html  menu.idx  style.css  style.xsl  warp.html  warp.xml  warp1.xml
webapp/include/: wa.h  wa_config.h  wa_general.h  wa_main.h  wa_provider.h  wa_request.h  wa_version.h  wa_webserver.h
webapp/java/: .cvsignore  Constants.java  Constants.java.in  Makefile  Makefile.in  WarpCertificates.java  WarpConfigurationHandler.java  WarpConnection.java  WarpConnectionHandler.java  WarpConnector.java  WarpConstants.java  WarpContext.java  WarpDebug.java  WarpEngine.java  WarpEngineMapper.java  WarpEngineValve.java  WarpHandler.java  WarpHandlerTable.java  WarpHost.java  WarpInputStream.java  WarpLogger.java  WarpOutputStream.java  WarpPacket.java  WarpReader.java  WarpRequest.java  WarpRequestHandler.java  WarpResponse.java  WarpSSLData.java  WarpTable.java
webapp/lib/: .cvsignore  Makefile.in  Makefile.win  pr_info.c  pr_warp.c  pr_warp.h  pr_warp_config.c  pr_warp_network.c  pr_warp_packet.c  pr_warp_socketpool.c  wa_config.c  wa_general.c  wa_main.c  wa_request.c
webapp/nsapi/: webapp.c
webapp/scandoc/: scandoc.pl  template.pl
webapp/support/: CygWin.LICENSE.txt  apjava.m4  aplocal.m4  buildconf.sh  formatfile.c  nightly.sh  scandoc.pl  template.pl  wa_ant.m4  wa_apr.m4  wa_apxs.m4  wa_exec.m4  wa_perl.m4  wa_util.m4  wa_version.m4
webapp/webapplib/: Makefile  wa.c  wa.h  wa_application.h  wa_callback.c  wa_callback.h  wa_config.h  wa_connection.c  wa_connection.h  wa_host.c  wa_host.h  wa_memorypool.c  wa_memorypool.h  wa_provider.c  wa_provider.h  wa_provider_info.c  wa_provider_warp.c  wa_provider_warp.h  wa_request.c  wa_request.h  wa_virtualhost.h  wa_webserver.h
(+885 files in other folders)
