# Runs with 'cmake'. 

# You must call 'download_deps.sh' first to get openssl and apr source
# ( or equivalent commands ). I tried to use 'ExternalProject_Add' to download, but doesn't seem
# to do what I need. The source must go to deps/src/{apr,openssl}

# For Eclipse: cmake -G "Eclipse CDT4 - Unix Makefiles"

# Build: "cmake . ; make VERBOSE=1"

# It is still possible to build with libtool:
# download_deps.sh
# build openssl and apr
# cd native
# ./buildconf --with-apr=../deps/src/apr
# ./configure --with-apr=/usr/local/apr --with-ssl=/usr/local/ssl


cmake_minimum_required (VERSION 2.6) 
project (TOMCAT_JNI)

FIND_PACKAGE(JNI REQUIRED)
include (${CMAKE_ROOT}/Modules/ExternalProject.cmake)

enable_language(ASM-ATT)
set(can_use_assembler TRUE)

set(DEPS ${TOMCAT_JNI_SOURCE_DIR}/deps/src)

include_directories (${TOMCAT_JNI_SOURCE_DIR}/native/include 
  ${DEPS}/apr/include
  ${DEPS}/apr/include/arch/unix
  ${DEPS}/openssl
  ${DEPS}/
  ${DEPS}/openssl/include 
  ${DEPS}/openssl/crypto
  ${DEPS}/openssl/crypto/modes
  ${DEPS}/openssl/crypto/asn1
  ${DEPS}/openssl/crypto/evp
  ${JAVA_INCLUDE_PATH}
) 

set (SSL_C_FLAGS "-DOPENSSL_THREADS -D_REENTRANT -DDSO_DLFCN -DHAVE_DLFCN_H -Wa,--noexecstack -DL_ENDIAN -DTERMIO -DOPENSSL_IA32_SSE2 -DOPENSSL_BN_ASM_MONT -DOPENSSL_BN_ASM_MONT5 -DOPENSSL_BN_ASM_GF2m -DSHA1_ASM -DSHA256_ASM -DSHA512_ASM -DMD5_ASM -DAES_ASM -DVPAES_ASM -DBSAES_ASM -DWHIRLPOOL_ASM -DGHASH_ASM ")

set (CMAKE_C_FLAGS "-pthread   -DHAVE_CONFIG_H -DLINUX=2 -D_REENTRANT -D_GNU_SOURCE -DHAVE_OPENSSL -fPIC -DOPENSSL_PIC  -m64 -O3 -Wall ${SSL_C_FLAGS}")

set (OPENSSL_SRC ${DEPS}/openssl)

set (SSL_ASM 
${OPENSSL_SRC}/crypto/sha/sha512-x86_64.s
${OPENSSL_SRC}/crypto/sha/sha256-x86_64.s
${OPENSSL_SRC}/crypto/sha/sha1-x86_64.s
${OPENSSL_SRC}/crypto/bn/x86_64-mont5.s
${OPENSSL_SRC}/crypto/bn/x86_64-gf2m.s
${OPENSSL_SRC}/crypto/bn/modexp512-x86_64.s
${OPENSSL_SRC}/crypto/camellia/cmll-x86_64.s
${OPENSSL_SRC}/crypto/md5/md5-x86_64.s
${OPENSSL_SRC}/crypto/whrlpool/wp-x86_64.s
${OPENSSL_SRC}/crypto/rc4/rc4-x86_64.s
${OPENSSL_SRC}/crypto/rc4/rc4-md5-x86_64.s
${OPENSSL_SRC}/crypto/aes/aesni-sha1-x86_64.s
${OPENSSL_SRC}/crypto/aes/aesni-x86_64.s
${OPENSSL_SRC}/crypto/aes/aes-x86_64.s
${OPENSSL_SRC}/crypto/aes/bsaes-x86_64.s
${OPENSSL_SRC}/crypto/bn/x86_64-mont.s
${OPENSSL_SRC}/crypto/aes/vpaes-x86_64.s
${OPENSSL_SRC}/crypto/modes/ghash-x86_64.s
${OPENSSL_SRC}/crypto/x86_64cpuid.s
)

# Cmake doesn't support conveneinece libraries ( static ? )
add_library (ssl STATIC
${SSL_ASM}
${OPENSSL_SRC}/crypto/cversion.c
${OPENSSL_SRC}/crypto/ec/ec2_oct.c
${OPENSSL_SRC}/crypto/ec/ecp_smpl.c
${OPENSSL_SRC}/crypto/ec/ec_check.c
${OPENSSL_SRC}/crypto/ec/ecp_nist.c
${OPENSSL_SRC}/crypto/ec/ec_err.c
${OPENSSL_SRC}/crypto/ec/ecp_mont.c
${OPENSSL_SRC}/crypto/ec/ec_key.c
${OPENSSL_SRC}/crypto/ec/ec_asn1.c
${OPENSSL_SRC}/crypto/ec/ecp_nistp256.c
${OPENSSL_SRC}/crypto/ec/ecp_oct.c
${OPENSSL_SRC}/crypto/ec/ec_cvt.c
${OPENSSL_SRC}/crypto/ec/ecp_nistputil.c
${OPENSSL_SRC}/crypto/ec/ecp_nistp521.c
${OPENSSL_SRC}/crypto/ec/ec_print.c
${OPENSSL_SRC}/crypto/ec/eck_prn.c
${OPENSSL_SRC}/crypto/ec/ec_curve.c
${OPENSSL_SRC}/crypto/ec/ec_oct.c
${OPENSSL_SRC}/crypto/ec/ecp_nistp224.c
${OPENSSL_SRC}/crypto/ec/ec_mult.c
${OPENSSL_SRC}/crypto/ec/ec_pmeth.c
${OPENSSL_SRC}/crypto/ec/ec2_smpl.c
${OPENSSL_SRC}/crypto/ec/ec2_mult.c
${OPENSSL_SRC}/crypto/ec/ec_ameth.c
${OPENSSL_SRC}/crypto/ec/ec_lib.c
${OPENSSL_SRC}/crypto/bio/bio_lib.c
${OPENSSL_SRC}/crypto/bio/bss_sock.c
${OPENSSL_SRC}/crypto/bio/bss_log.c
${OPENSSL_SRC}/crypto/bio/bio_cb.c
${OPENSSL_SRC}/crypto/bio/bss_conn.c
${OPENSSL_SRC}/crypto/bio/bss_fd.c
${OPENSSL_SRC}/crypto/bio/bio_err.c
${OPENSSL_SRC}/crypto/bio/bss_file.c
${OPENSSL_SRC}/crypto/bio/bss_bio.c
${OPENSSL_SRC}/crypto/bio/b_print.c
${OPENSSL_SRC}/crypto/bio/b_sock.c
${OPENSSL_SRC}/crypto/bio/b_dump.c
${OPENSSL_SRC}/crypto/bio/bss_acpt.c
${OPENSSL_SRC}/crypto/bio/bss_dgram.c
${OPENSSL_SRC}/crypto/bio/bf_buff.c
${OPENSSL_SRC}/crypto/bio/bss_mem.c
${OPENSSL_SRC}/crypto/bio/bss_null.c
${OPENSSL_SRC}/crypto/bio/bf_nbio.c
${OPENSSL_SRC}/crypto/bio/bf_null.c
${OPENSSL_SRC}/crypto/ebcdic.c
${OPENSSL_SRC}/crypto/sha/sha_one.c
${OPENSSL_SRC}/crypto/sha/sha1dgst.c
${OPENSSL_SRC}/crypto/sha/sha512.c
${OPENSSL_SRC}/crypto/sha/sha_dgst.c
${OPENSSL_SRC}/crypto/sha/sha256.c
${OPENSSL_SRC}/crypto/sha/sha1_one.c
${OPENSSL_SRC}/crypto/bn/bn_err.c
${OPENSSL_SRC}/crypto/bn/bn_print.c
${OPENSSL_SRC}/crypto/bn/bn_exp.c
${OPENSSL_SRC}/crypto/bn/bn_blind.c
${OPENSSL_SRC}/crypto/bn/bn_mpi.c
${OPENSSL_SRC}/crypto/bn/bn_const.c
${OPENSSL_SRC}/crypto/bn/bn_mod.c
${OPENSSL_SRC}/crypto/bn/bn_x931p.c
${OPENSSL_SRC}/crypto/bn/bn_exp2.c
${OPENSSL_SRC}/crypto/bn/bn_prime.c
${OPENSSL_SRC}/crypto/bn/bn_mul.c
${OPENSSL_SRC}/crypto/bn/bn_add.c
${OPENSSL_SRC}/crypto/bn/bn_kron.c
${OPENSSL_SRC}/crypto/bn/bn_sqrt.c
${OPENSSL_SRC}/crypto/bn/bn_depr.c
${OPENSSL_SRC}/crypto/bn/bn_div.c
${OPENSSL_SRC}/crypto/bn/bn_nist.c
${OPENSSL_SRC}/crypto/bn/bn_gf2m.c
${OPENSSL_SRC}/crypto/bn/bn_gcd.c
${OPENSSL_SRC}/crypto/bn/bn_recp.c
${OPENSSL_SRC}/crypto/bn/bn_lib.c
${OPENSSL_SRC}/crypto/bn/bn_rand.c
${OPENSSL_SRC}/crypto/bn/bn_sqr.c
${OPENSSL_SRC}/crypto/bn/bn_shift.c
${OPENSSL_SRC}/crypto/bn/bn_mont.c
${OPENSSL_SRC}/crypto/bn/asm/x86_64-gcc.c
${OPENSSL_SRC}/crypto/bn/bn_ctx.c
${OPENSSL_SRC}/crypto/bn/bn_word.c
${OPENSSL_SRC}/crypto/objects/obj_xref.c
${OPENSSL_SRC}/crypto/objects/o_names.c
${OPENSSL_SRC}/crypto/objects/obj_dat.c
${OPENSSL_SRC}/crypto/objects/obj_lib.c
${OPENSSL_SRC}/crypto/objects/obj_err.c
${OPENSSL_SRC}/crypto/ui/ui_openssl.c
${OPENSSL_SRC}/crypto/ui/ui_util.c
${OPENSSL_SRC}/crypto/ui/ui_err.c
${OPENSSL_SRC}/crypto/ui/ui_compat.c
${OPENSSL_SRC}/crypto/ui/ui_lib.c
${OPENSSL_SRC}/crypto/stack/stack.c
${OPENSSL_SRC}/crypto/x509/x509_ext.c
${OPENSSL_SRC}/crypto/x509/x509_err.c
${OPENSSL_SRC}/crypto/x509/x509rset.c
${OPENSSL_SRC}/crypto/x509/x509_cmp.c
${OPENSSL_SRC}/crypto/x509/x509_req.c
${OPENSSL_SRC}/crypto/x509/x509spki.c
${OPENSSL_SRC}/crypto/x509/by_file.c
${OPENSSL_SRC}/crypto/x509/x509_lu.c
${OPENSSL_SRC}/crypto/x509/x509_set.c
${OPENSSL_SRC}/crypto/x509/x509_vfy.c
${OPENSSL_SRC}/crypto/x509/x509type.c
${OPENSSL_SRC}/crypto/x509/x509name.c
${OPENSSL_SRC}/crypto/x509/x509_vpm.c
${OPENSSL_SRC}/crypto/x509/x509_obj.c
${OPENSSL_SRC}/crypto/x509/x509_def.c
${OPENSSL_SRC}/crypto/x509/x509_att.c
${OPENSSL_SRC}/crypto/x509/x509cset.c
${OPENSSL_SRC}/crypto/x509/x_all.c
${OPENSSL_SRC}/crypto/x509/x509_v3.c
${OPENSSL_SRC}/crypto/x509/x509_trs.c
${OPENSSL_SRC}/crypto/x509/x509_txt.c
${OPENSSL_SRC}/crypto/x509/x509_r2x.c
${OPENSSL_SRC}/crypto/x509/x509_d2.c
${OPENSSL_SRC}/crypto/x509/by_dir.c
${OPENSSL_SRC}/crypto/pem/pem_seal.c
${OPENSSL_SRC}/crypto/pem/pem_sign.c
${OPENSSL_SRC}/crypto/pem/pem_all.c
${OPENSSL_SRC}/crypto/pem/pem_err.c
${OPENSSL_SRC}/crypto/pem/pem_pk8.c
${OPENSSL_SRC}/crypto/pem/pem_info.c
${OPENSSL_SRC}/crypto/pem/pem_x509.c
${OPENSSL_SRC}/crypto/pem/pem_pkey.c
${OPENSSL_SRC}/crypto/pem/pem_xaux.c
${OPENSSL_SRC}/crypto/pem/pem_oth.c
${OPENSSL_SRC}/crypto/pem/pem_lib.c
${OPENSSL_SRC}/crypto/pem/pvkfmt.c
${OPENSSL_SRC}/crypto/cast/c_ecb.c
${OPENSSL_SRC}/crypto/cast/c_ofb64.c
${OPENSSL_SRC}/crypto/cast/c_enc.c
${OPENSSL_SRC}/crypto/cast/c_skey.c
${OPENSSL_SRC}/crypto/cast/c_cfb64.c
${OPENSSL_SRC}/crypto/buffer/buf_err.c
${OPENSSL_SRC}/crypto/buffer/buffer.c
${OPENSSL_SRC}/crypto/buffer/buf_str.c
${OPENSSL_SRC}/crypto/cmac/cm_ameth.c
${OPENSSL_SRC}/crypto/cmac/cmac.c
${OPENSSL_SRC}/crypto/cmac/cm_pmeth.c
${OPENSSL_SRC}/crypto/rc2/rc2ofb64.c
${OPENSSL_SRC}/crypto/rc2/rc2_skey.c
${OPENSSL_SRC}/crypto/rc2/rc2cfb64.c
${OPENSSL_SRC}/crypto/rc2/rc2_cbc.c
${OPENSSL_SRC}/crypto/rc2/rc2_ecb.c
${OPENSSL_SRC}/crypto/lhash/lhash.c
${OPENSSL_SRC}/crypto/lhash/lh_stats.c
${OPENSSL_SRC}/crypto/rand/rand_unix.c
${OPENSSL_SRC}/crypto/rand/rand_os2.c
${OPENSSL_SRC}/crypto/rand/md_rand.c
${OPENSSL_SRC}/crypto/rand/rand_egd.c
${OPENSSL_SRC}/crypto/rand/rand_lib.c
${OPENSSL_SRC}/crypto/rand/rand_nw.c
${OPENSSL_SRC}/crypto/rand/rand_win.c
${OPENSSL_SRC}/crypto/rand/randfile.c
${OPENSSL_SRC}/crypto/rand/rand_err.c
${OPENSSL_SRC}/crypto/uid.c
${OPENSSL_SRC}/crypto/err/err.c
${OPENSSL_SRC}/crypto/err/err_all.c
${OPENSSL_SRC}/crypto/err/err_prn.c
${OPENSSL_SRC}/crypto/bf/bf_ofb64.c
${OPENSSL_SRC}/crypto/bf/bf_skey.c
${OPENSSL_SRC}/crypto/bf/bf_cfb64.c
${OPENSSL_SRC}/crypto/bf/bf_ecb.c
${OPENSSL_SRC}/crypto/bf/bf_enc.c
${OPENSSL_SRC}/crypto/o_dir.c
${OPENSSL_SRC}/crypto/asn1/tasn_new.c
${OPENSSL_SRC}/crypto/asn1/asn_pack.c
${OPENSSL_SRC}/crypto/asn1/tasn_prn.c
${OPENSSL_SRC}/crypto/asn1/asn_moid.c
${OPENSSL_SRC}/crypto/asn1/x_sig.c
${OPENSSL_SRC}/crypto/asn1/p8_pkey.c
${OPENSSL_SRC}/crypto/asn1/a_sign.c
${OPENSSL_SRC}/crypto/asn1/x_pubkey.c
${OPENSSL_SRC}/crypto/asn1/i2d_pr.c
${OPENSSL_SRC}/crypto/asn1/a_bitstr.c
${OPENSSL_SRC}/crypto/asn1/a_object.c
${OPENSSL_SRC}/crypto/asn1/tasn_utl.c
${OPENSSL_SRC}/crypto/asn1/nsseq.c
${OPENSSL_SRC}/crypto/asn1/asn1_gen.c
${OPENSSL_SRC}/crypto/asn1/x_long.c
${OPENSSL_SRC}/crypto/asn1/x_attrib.c
${OPENSSL_SRC}/crypto/asn1/a_time.c
${OPENSSL_SRC}/crypto/asn1/p5_pbev2.c
${OPENSSL_SRC}/crypto/asn1/t_x509.c
${OPENSSL_SRC}/crypto/asn1/x_pkey.c
${OPENSSL_SRC}/crypto/asn1/tasn_dec.c
${OPENSSL_SRC}/crypto/asn1/asn1_par.c
${OPENSSL_SRC}/crypto/asn1/tasn_fre.c
${OPENSSL_SRC}/crypto/asn1/x_crl.c
${OPENSSL_SRC}/crypto/asn1/a_digest.c
${OPENSSL_SRC}/crypto/asn1/t_req.c
${OPENSSL_SRC}/crypto/asn1/f_int.c
${OPENSSL_SRC}/crypto/asn1/d2i_pu.c
${OPENSSL_SRC}/crypto/asn1/d2i_pr.c
${OPENSSL_SRC}/crypto/asn1/a_type.c
${OPENSSL_SRC}/crypto/asn1/f_enum.c
${OPENSSL_SRC}/crypto/asn1/x_name.c
${OPENSSL_SRC}/crypto/asn1/asn1_err.c
${OPENSSL_SRC}/crypto/asn1/x_bignum.c
${OPENSSL_SRC}/crypto/asn1/i2d_pu.c
${OPENSSL_SRC}/crypto/asn1/x_exten.c
${OPENSSL_SRC}/crypto/asn1/a_utctm.c
${OPENSSL_SRC}/crypto/asn1/a_verify.c
${OPENSSL_SRC}/crypto/asn1/a_bool.c
${OPENSSL_SRC}/crypto/asn1/tasn_typ.c
${OPENSSL_SRC}/crypto/asn1/x_val.c
${OPENSSL_SRC}/crypto/asn1/tasn_enc.c
${OPENSSL_SRC}/crypto/asn1/t_spki.c
${OPENSSL_SRC}/crypto/asn1/a_mbstr.c
${OPENSSL_SRC}/crypto/asn1/a_gentm.c
${OPENSSL_SRC}/crypto/asn1/x_spki.c
${OPENSSL_SRC}/crypto/asn1/a_strex.c
${OPENSSL_SRC}/crypto/asn1/a_enum.c
${OPENSSL_SRC}/crypto/asn1/a_octet.c
${OPENSSL_SRC}/crypto/asn1/p5_pbe.c
${OPENSSL_SRC}/crypto/asn1/a_utf8.c
${OPENSSL_SRC}/crypto/asn1/a_d2i_fp.c
${OPENSSL_SRC}/crypto/asn1/t_bitst.c
${OPENSSL_SRC}/crypto/asn1/x_algor.c
${OPENSSL_SRC}/crypto/asn1/ameth_lib.c
${OPENSSL_SRC}/crypto/asn1/bio_asn1.c
${OPENSSL_SRC}/crypto/asn1/asn1_lib.c
${OPENSSL_SRC}/crypto/asn1/t_x509a.c
${OPENSSL_SRC}/crypto/asn1/x_info.c
${OPENSSL_SRC}/crypto/asn1/a_dup.c
${OPENSSL_SRC}/crypto/asn1/a_i2d_fp.c
${OPENSSL_SRC}/crypto/asn1/t_pkey.c
${OPENSSL_SRC}/crypto/asn1/x_nx509.c
${OPENSSL_SRC}/crypto/asn1/x_req.c
${OPENSSL_SRC}/crypto/asn1/a_print.c
${OPENSSL_SRC}/crypto/asn1/t_crl.c
${OPENSSL_SRC}/crypto/asn1/n_pkey.c
${OPENSSL_SRC}/crypto/asn1/a_set.c
${OPENSSL_SRC}/crypto/asn1/f_string.c
${OPENSSL_SRC}/crypto/asn1/asn_mime.c
${OPENSSL_SRC}/crypto/asn1/a_strnid.c
${OPENSSL_SRC}/crypto/asn1/a_bytes.c
${OPENSSL_SRC}/crypto/asn1/x_x509.c
${OPENSSL_SRC}/crypto/asn1/bio_ndef.c
${OPENSSL_SRC}/crypto/asn1/a_int.c
${OPENSSL_SRC}/crypto/asn1/x_x509a.c
${OPENSSL_SRC}/crypto/asn1/evp_asn1.c
${OPENSSL_SRC}/crypto/comp/comp_lib.c
${OPENSSL_SRC}/crypto/comp/comp_err.c
${OPENSSL_SRC}/crypto/comp/c_rle.c
${OPENSSL_SRC}/crypto/comp/c_zlib.c
${OPENSSL_SRC}/crypto/dso/dso_win32.c
${OPENSSL_SRC}/crypto/dso/dso_openssl.c
${OPENSSL_SRC}/crypto/dso/dso_lib.c
${OPENSSL_SRC}/crypto/dso/dso_beos.c
${OPENSSL_SRC}/crypto/dso/dso_err.c
${OPENSSL_SRC}/crypto/dso/dso_dlfcn.c
${OPENSSL_SRC}/crypto/dso/dso_vms.c
${OPENSSL_SRC}/crypto/dso/dso_dl.c
${OPENSSL_SRC}/crypto/dso/dso_null.c
${OPENSSL_SRC}/crypto/o_time.c
${OPENSSL_SRC}/crypto/seed/seed_ecb.c
${OPENSSL_SRC}/crypto/seed/seed_cfb.c
${OPENSSL_SRC}/crypto/seed/seed.c
${OPENSSL_SRC}/crypto/seed/seed_cbc.c
${OPENSSL_SRC}/crypto/seed/seed_ofb.c
${OPENSSL_SRC}/crypto/ts/ts_verify_ctx.c
${OPENSSL_SRC}/crypto/ts/ts_rsp_utils.c
${OPENSSL_SRC}/crypto/ts/ts_rsp_verify.c
${OPENSSL_SRC}/crypto/ts/ts_asn1.c
${OPENSSL_SRC}/crypto/ts/ts_rsp_print.c
${OPENSSL_SRC}/crypto/ts/ts_req_print.c
${OPENSSL_SRC}/crypto/ts/ts_lib.c
${OPENSSL_SRC}/crypto/ts/ts_conf.c
${OPENSSL_SRC}/crypto/ts/ts_req_utils.c
${OPENSSL_SRC}/crypto/ts/ts_rsp_sign.c
${OPENSSL_SRC}/crypto/ts/ts_err.c
${OPENSSL_SRC}/crypto/evp/e_aes_cbc_hmac_sha1.c
${OPENSSL_SRC}/crypto/evp/e_old.c
${OPENSSL_SRC}/crypto/evp/evp_err.c
${OPENSSL_SRC}/crypto/evp/bio_enc.c
${OPENSSL_SRC}/crypto/evp/p_open.c
${OPENSSL_SRC}/crypto/evp/e_bf.c
${OPENSSL_SRC}/crypto/evp/e_rc2.c
${OPENSSL_SRC}/crypto/evp/bio_md.c
${OPENSSL_SRC}/crypto/evp/e_rc4.c
${OPENSSL_SRC}/crypto/evp/p5_crpt.c
${OPENSSL_SRC}/crypto/evp/p5_crpt2.c
${OPENSSL_SRC}/crypto/evp/e_xcbc_d.c
${OPENSSL_SRC}/crypto/evp/e_camellia.c
${OPENSSL_SRC}/crypto/evp/m_md5.c
${OPENSSL_SRC}/crypto/evp/e_rc4_hmac_md5.c
${OPENSSL_SRC}/crypto/evp/m_dss.c
${OPENSSL_SRC}/crypto/evp/evp_enc.c
${OPENSSL_SRC}/crypto/evp/evp_pkey.c
${OPENSSL_SRC}/crypto/evp/e_aes.c
${OPENSSL_SRC}/crypto/evp/p_verify.c
${OPENSSL_SRC}/crypto/evp/p_dec.c
${OPENSSL_SRC}/crypto/evp/e_idea.c
${OPENSSL_SRC}/crypto/evp/evp_acnf.c
${OPENSSL_SRC}/crypto/evp/m_ripemd.c
${OPENSSL_SRC}/crypto/evp/m_sigver.c
${OPENSSL_SRC}/crypto/evp/m_ecdsa.c
${OPENSSL_SRC}/crypto/evp/evp_key.c
${OPENSSL_SRC}/crypto/evp/c_alld.c
${OPENSSL_SRC}/crypto/evp/digest.c
${OPENSSL_SRC}/crypto/evp/m_sha1.c
${OPENSSL_SRC}/crypto/evp/names.c
${OPENSSL_SRC}/crypto/evp/bio_ok.c
${OPENSSL_SRC}/crypto/evp/p_lib.c
${OPENSSL_SRC}/crypto/evp/evp_lib.c
${OPENSSL_SRC}/crypto/evp/pmeth_fn.c
${OPENSSL_SRC}/crypto/evp/m_md2.c
${OPENSSL_SRC}/crypto/evp/p_seal.c
${OPENSSL_SRC}/crypto/evp/evp_pbe.c
${OPENSSL_SRC}/crypto/evp/e_des3.c
${OPENSSL_SRC}/crypto/evp/pmeth_gn.c
${OPENSSL_SRC}/crypto/evp/e_cast.c
${OPENSSL_SRC}/crypto/evp/m_dss1.c
${OPENSSL_SRC}/crypto/evp/m_md4.c
${OPENSSL_SRC}/crypto/evp/m_wp.c
${OPENSSL_SRC}/crypto/evp/e_des.c
${OPENSSL_SRC}/crypto/evp/p_sign.c
${OPENSSL_SRC}/crypto/evp/pmeth_lib.c
${OPENSSL_SRC}/crypto/evp/m_mdc2.c
${OPENSSL_SRC}/crypto/evp/p_enc.c
${OPENSSL_SRC}/crypto/evp/e_rc5.c
${OPENSSL_SRC}/crypto/evp/evp_fips.c
${OPENSSL_SRC}/crypto/evp/c_allc.c
${OPENSSL_SRC}/crypto/evp/bio_b64.c
${OPENSSL_SRC}/crypto/evp/c_all.c
${OPENSSL_SRC}/crypto/evp/m_null.c
${OPENSSL_SRC}/crypto/evp/encode.c
${OPENSSL_SRC}/crypto/evp/m_sha.c
${OPENSSL_SRC}/crypto/evp/e_null.c
${OPENSSL_SRC}/crypto/evp/e_seed.c
${OPENSSL_SRC}/crypto/cryptlib.c
${OPENSSL_SRC}/crypto/ocsp/ocsp_vfy.c
${OPENSSL_SRC}/crypto/ocsp/ocsp_asn.c
${OPENSSL_SRC}/crypto/ocsp/ocsp_ext.c
${OPENSSL_SRC}/crypto/ocsp/ocsp_cl.c
${OPENSSL_SRC}/crypto/ocsp/ocsp_srv.c
${OPENSSL_SRC}/crypto/ocsp/ocsp_lib.c
${OPENSSL_SRC}/crypto/ocsp/ocsp_ht.c
${OPENSSL_SRC}/crypto/ocsp/ocsp_prn.c
${OPENSSL_SRC}/crypto/ocsp/ocsp_err.c
${OPENSSL_SRC}/crypto/camellia/cmll_ofb.c
${OPENSSL_SRC}/crypto/camellia/cmll_cfb.c
${OPENSSL_SRC}/crypto/camellia/cmll_misc.c
${OPENSSL_SRC}/crypto/camellia/cmll_ctr.c
${OPENSSL_SRC}/crypto/camellia/cmll_utl.c
${OPENSSL_SRC}/crypto/camellia/cmll_ecb.c
${OPENSSL_SRC}/crypto/conf/conf_mod.c
${OPENSSL_SRC}/crypto/conf/conf_sap.c
${OPENSSL_SRC}/crypto/conf/conf_def.c
${OPENSSL_SRC}/crypto/conf/conf_lib.c
${OPENSSL_SRC}/crypto/conf/conf_err.c
${OPENSSL_SRC}/crypto/conf/conf_mall.c
${OPENSSL_SRC}/crypto/conf/conf_api.c
${OPENSSL_SRC}/crypto/cpt_err.c
${OPENSSL_SRC}/crypto/md5/md5_one.c
${OPENSSL_SRC}/crypto/md5/md5_dgst.c
${OPENSSL_SRC}/crypto/o_init.c
${OPENSSL_SRC}/crypto/ex_data.c
${OPENSSL_SRC}/crypto/dsa/dsa_vrf.c
${OPENSSL_SRC}/crypto/dsa/dsa_err.c
${OPENSSL_SRC}/crypto/dsa/dsa_gen.c
${OPENSSL_SRC}/crypto/dsa/dsa_ameth.c
${OPENSSL_SRC}/crypto/dsa/dsa_key.c
${OPENSSL_SRC}/crypto/dsa/dsa_lib.c
${OPENSSL_SRC}/crypto/dsa/dsa_asn1.c
${OPENSSL_SRC}/crypto/dsa/dsa_ossl.c
${OPENSSL_SRC}/crypto/dsa/dsa_prn.c
${OPENSSL_SRC}/crypto/dsa/dsa_depr.c
${OPENSSL_SRC}/crypto/dsa/dsa_pmeth.c
${OPENSSL_SRC}/crypto/dsa/dsa_sign.c
${OPENSSL_SRC}/crypto/md4/md4_one.c
${OPENSSL_SRC}/crypto/md4/md4_dgst.c
${OPENSSL_SRC}/crypto/dh/dh_prn.c
${OPENSSL_SRC}/crypto/dh/dh_lib.c
${OPENSSL_SRC}/crypto/dh/dh_pmeth.c
${OPENSSL_SRC}/crypto/dh/dh_gen.c
${OPENSSL_SRC}/crypto/dh/dh_check.c
${OPENSSL_SRC}/crypto/dh/dh_err.c
${OPENSSL_SRC}/crypto/dh/dh_key.c
${OPENSSL_SRC}/crypto/dh/dh_asn1.c
${OPENSSL_SRC}/crypto/dh/dh_depr.c
${OPENSSL_SRC}/crypto/dh/dh_ameth.c
${OPENSSL_SRC}/crypto/txt_db/txt_db.c
${OPENSSL_SRC}/crypto/whrlpool/wp_dgst.c
${OPENSSL_SRC}/crypto/pkcs12/p12_decr.c
${OPENSSL_SRC}/crypto/pkcs12/p12_p8d.c
${OPENSSL_SRC}/crypto/pkcs12/pk12err.c
${OPENSSL_SRC}/crypto/pkcs12/p12_npas.c
${OPENSSL_SRC}/crypto/pkcs12/p12_asn.c
${OPENSSL_SRC}/crypto/pkcs12/p12_p8e.c
${OPENSSL_SRC}/crypto/pkcs12/p12_add.c
${OPENSSL_SRC}/crypto/pkcs12/p12_init.c
${OPENSSL_SRC}/crypto/pkcs12/p12_attr.c
${OPENSSL_SRC}/crypto/pkcs12/p12_mutl.c
${OPENSSL_SRC}/crypto/pkcs12/p12_crt.c
${OPENSSL_SRC}/crypto/pkcs12/p12_utl.c
${OPENSSL_SRC}/crypto/pkcs12/p12_key.c
${OPENSSL_SRC}/crypto/pkcs12/p12_kiss.c
${OPENSSL_SRC}/crypto/pkcs12/p12_crpt.c
${OPENSSL_SRC}/crypto/rc4/rc4_utl.c
${OPENSSL_SRC}/crypto/cms/cms_dd.c
${OPENSSL_SRC}/crypto/cms/cms_ess.c
${OPENSSL_SRC}/crypto/cms/cms_pwri.c
${OPENSSL_SRC}/crypto/cms/cms_sd.c
${OPENSSL_SRC}/crypto/cms/cms_io.c
${OPENSSL_SRC}/crypto/cms/cms_smime.c
${OPENSSL_SRC}/crypto/cms/cms_cd.c
${OPENSSL_SRC}/crypto/cms/cms_att.c
${OPENSSL_SRC}/crypto/cms/cms_lib.c
${OPENSSL_SRC}/crypto/cms/cms_asn1.c
${OPENSSL_SRC}/crypto/cms/cms_err.c
${OPENSSL_SRC}/crypto/cms/cms_env.c
${OPENSSL_SRC}/crypto/cms/cms_enc.c
${OPENSSL_SRC}/crypto/aes/aes_wrap.c
${OPENSSL_SRC}/crypto/aes/aes_ofb.c
${OPENSSL_SRC}/crypto/aes/aes_misc.c
${OPENSSL_SRC}/crypto/aes/aes_ctr.c
${OPENSSL_SRC}/crypto/aes/aes_cfb.c
${OPENSSL_SRC}/crypto/aes/aes_ecb.c
${OPENSSL_SRC}/crypto/aes/aes_ige.c
${OPENSSL_SRC}/crypto/ecdsa/ecs_ossl.c
${OPENSSL_SRC}/crypto/ecdsa/ecs_err.c
${OPENSSL_SRC}/crypto/ecdsa/ecs_asn1.c
${OPENSSL_SRC}/crypto/ecdsa/ecs_vrf.c
${OPENSSL_SRC}/crypto/ecdsa/ecs_lib.c
${OPENSSL_SRC}/crypto/ecdsa/ecs_sign.c
${OPENSSL_SRC}/crypto/rsa/rsa_prn.c
${OPENSSL_SRC}/crypto/rsa/rsa_chk.c
${OPENSSL_SRC}/crypto/rsa/rsa_lib.c
${OPENSSL_SRC}/crypto/rsa/rsa_asn1.c
${OPENSSL_SRC}/crypto/rsa/rsa_pss.c
${OPENSSL_SRC}/crypto/rsa/rsa_x931.c
${OPENSSL_SRC}/crypto/rsa/rsa_none.c
${OPENSSL_SRC}/crypto/rsa/rsa_null.c
${OPENSSL_SRC}/crypto/rsa/rsa_ameth.c
${OPENSSL_SRC}/crypto/rsa/rsa_oaep.c
${OPENSSL_SRC}/crypto/rsa/rsa_pk1.c
${OPENSSL_SRC}/crypto/rsa/rsa_saos.c
${OPENSSL_SRC}/crypto/rsa/rsa_depr.c
${OPENSSL_SRC}/crypto/rsa/rsa_err.c
${OPENSSL_SRC}/crypto/rsa/rsa_ssl.c
${OPENSSL_SRC}/crypto/rsa/rsa_eay.c
${OPENSSL_SRC}/crypto/rsa/rsa_sign.c
${OPENSSL_SRC}/crypto/rsa/rsa_pmeth.c
${OPENSSL_SRC}/crypto/rsa/rsa_gen.c
${OPENSSL_SRC}/crypto/rsa/rsa_crpt.c
${OPENSSL_SRC}/crypto/mdc2/mdc2_one.c
${OPENSSL_SRC}/crypto/mdc2/mdc2dgst.c
${OPENSSL_SRC}/crypto/idea/i_skey.c
${OPENSSL_SRC}/crypto/idea/i_ofb64.c
${OPENSSL_SRC}/crypto/idea/i_ecb.c
${OPENSSL_SRC}/crypto/idea/i_cbc.c
${OPENSSL_SRC}/crypto/idea/i_cfb64.c
${OPENSSL_SRC}/crypto/modes/cbc128.c
${OPENSSL_SRC}/crypto/modes/cfb128.c
${OPENSSL_SRC}/crypto/modes/ccm128.c
${OPENSSL_SRC}/crypto/modes/xts128.c
${OPENSSL_SRC}/crypto/modes/ctr128.c
${OPENSSL_SRC}/crypto/modes/gcm128.c
${OPENSSL_SRC}/crypto/modes/ofb128.c
${OPENSSL_SRC}/crypto/modes/cts128.c
${OPENSSL_SRC}/crypto/ecdh/ech_err.c
${OPENSSL_SRC}/crypto/ecdh/ech_ossl.c
${OPENSSL_SRC}/crypto/ecdh/ech_key.c
${OPENSSL_SRC}/crypto/ecdh/ech_lib.c
${OPENSSL_SRC}/crypto/srp/srp_vfy.c
${OPENSSL_SRC}/crypto/srp/srp_lib.c
${OPENSSL_SRC}/crypto/engine/tb_digest.c
${OPENSSL_SRC}/crypto/engine/tb_asnmth.c
${OPENSSL_SRC}/crypto/engine/tb_dh.c
${OPENSSL_SRC}/crypto/engine/tb_dsa.c
${OPENSSL_SRC}/crypto/engine/tb_cipher.c
${OPENSSL_SRC}/crypto/engine/eng_dyn.c
${OPENSSL_SRC}/crypto/engine/eng_fat.c
${OPENSSL_SRC}/crypto/engine/eng_ctrl.c
${OPENSSL_SRC}/crypto/engine/eng_cnf.c
${OPENSSL_SRC}/crypto/engine/eng_rdrand.c
${OPENSSL_SRC}/crypto/engine/tb_ecdsa.c
${OPENSSL_SRC}/crypto/engine/tb_rsa.c
${OPENSSL_SRC}/crypto/engine/eng_cryptodev.c
${OPENSSL_SRC}/crypto/engine/tb_ecdh.c
${OPENSSL_SRC}/crypto/engine/eng_pkey.c
${OPENSSL_SRC}/crypto/engine/tb_pkmeth.c
${OPENSSL_SRC}/crypto/engine/eng_table.c
${OPENSSL_SRC}/crypto/engine/eng_rsax.c
${OPENSSL_SRC}/crypto/engine/tb_rand.c
${OPENSSL_SRC}/crypto/engine/eng_err.c
${OPENSSL_SRC}/crypto/engine/eng_list.c
${OPENSSL_SRC}/crypto/engine/eng_lib.c
${OPENSSL_SRC}/crypto/engine/eng_openssl.c
${OPENSSL_SRC}/crypto/engine/eng_all.c
${OPENSSL_SRC}/crypto/engine/eng_init.c
${OPENSSL_SRC}/crypto/engine/tb_store.c
${OPENSSL_SRC}/crypto/o_str.c
${OPENSSL_SRC}/crypto/krb5/krb5_asn.c
${OPENSSL_SRC}/crypto/fips_ers.c
${OPENSSL_SRC}/crypto/pqueue/pqueue.c
${OPENSSL_SRC}/crypto/o_fips.c
${OPENSSL_SRC}/crypto/pkcs7/pk7_mime.c
${OPENSSL_SRC}/crypto/pkcs7/pk7_lib.c
${OPENSSL_SRC}/crypto/pkcs7/pk7_attr.c
${OPENSSL_SRC}/crypto/pkcs7/pk7_smime.c
${OPENSSL_SRC}/crypto/pkcs7/pk7_asn1.c
${OPENSSL_SRC}/crypto/pkcs7/pkcs7err.c
${OPENSSL_SRC}/crypto/pkcs7/bio_pk7.c
${OPENSSL_SRC}/crypto/pkcs7/pk7_doit.c
${OPENSSL_SRC}/crypto/mem_dbg.c
${OPENSSL_SRC}/crypto/mem.c
${OPENSSL_SRC}/crypto/hmac/hm_pmeth.c
${OPENSSL_SRC}/crypto/hmac/hm_ameth.c
${OPENSSL_SRC}/crypto/hmac/hmac.c
${OPENSSL_SRC}/crypto/des/ofb_enc.c
${OPENSSL_SRC}/crypto/des/fcrypt_b.c
${OPENSSL_SRC}/crypto/des/qud_cksm.c
${OPENSSL_SRC}/crypto/des/cbc_cksm.c
${OPENSSL_SRC}/crypto/des/str2key.c
${OPENSSL_SRC}/crypto/des/rand_key.c
${OPENSSL_SRC}/crypto/des/des_enc.c
${OPENSSL_SRC}/crypto/des/cfb_enc.c
${OPENSSL_SRC}/crypto/des/ofb64ede.c
${OPENSSL_SRC}/crypto/des/cfb64enc.c
${OPENSSL_SRC}/crypto/des/ofb64enc.c
${OPENSSL_SRC}/crypto/des/enc_read.c
${OPENSSL_SRC}/crypto/des/fcrypt.c
${OPENSSL_SRC}/crypto/des/xcbc_enc.c
${OPENSSL_SRC}/crypto/des/cfb64ede.c
${OPENSSL_SRC}/crypto/des/des_old2.c
${OPENSSL_SRC}/crypto/des/pcbc_enc.c
${OPENSSL_SRC}/crypto/des/set_key.c
${OPENSSL_SRC}/crypto/des/ede_cbcm_enc.c
${OPENSSL_SRC}/crypto/des/ecb3_enc.c
${OPENSSL_SRC}/crypto/des/read2pwd.c
${OPENSSL_SRC}/crypto/des/rpc_enc.c
${OPENSSL_SRC}/crypto/des/ecb_enc.c
${OPENSSL_SRC}/crypto/des/des_old.c
${OPENSSL_SRC}/crypto/des/enc_writ.c
${OPENSSL_SRC}/crypto/des/cbc_enc.c
${OPENSSL_SRC}/crypto/x509v3/v3_pcons.c
${OPENSSL_SRC}/crypto/x509v3/v3_crld.c
${OPENSSL_SRC}/crypto/x509v3/v3_ncons.c
${OPENSSL_SRC}/crypto/x509v3/pcy_cache.c
${OPENSSL_SRC}/crypto/x509v3/v3_info.c
${OPENSSL_SRC}/crypto/x509v3/v3_genn.c
${OPENSSL_SRC}/crypto/x509v3/v3_bcons.c
${OPENSSL_SRC}/crypto/x509v3/v3_skey.c
${OPENSSL_SRC}/crypto/x509v3/v3_pku.c
${OPENSSL_SRC}/crypto/x509v3/v3_extku.c
${OPENSSL_SRC}/crypto/x509v3/pcy_data.c
${OPENSSL_SRC}/crypto/x509v3/v3_purp.c
${OPENSSL_SRC}/crypto/x509v3/v3_lib.c
${OPENSSL_SRC}/crypto/x509v3/v3_pmaps.c
${OPENSSL_SRC}/crypto/x509v3/v3_pcia.c
${OPENSSL_SRC}/crypto/x509v3/v3_sxnet.c
${OPENSSL_SRC}/crypto/x509v3/v3_enum.c
${OPENSSL_SRC}/crypto/x509v3/v3_alt.c
${OPENSSL_SRC}/crypto/x509v3/v3_akey.c
${OPENSSL_SRC}/crypto/x509v3/v3_ia5.c
${OPENSSL_SRC}/crypto/x509v3/pcy_tree.c
${OPENSSL_SRC}/crypto/x509v3/v3_int.c
${OPENSSL_SRC}/crypto/x509v3/v3_utl.c
${OPENSSL_SRC}/crypto/x509v3/v3_pci.c
${OPENSSL_SRC}/crypto/x509v3/v3_asid.c
${OPENSSL_SRC}/crypto/x509v3/v3_akeya.c
${OPENSSL_SRC}/crypto/x509v3/v3_cpols.c
${OPENSSL_SRC}/crypto/x509v3/pcy_node.c
${OPENSSL_SRC}/crypto/x509v3/v3_bitst.c
${OPENSSL_SRC}/crypto/x509v3/v3_prn.c
${OPENSSL_SRC}/crypto/x509v3/v3_addr.c
${OPENSSL_SRC}/crypto/x509v3/pcy_lib.c
${OPENSSL_SRC}/crypto/x509v3/pcy_map.c
${OPENSSL_SRC}/crypto/x509v3/v3_conf.c
${OPENSSL_SRC}/crypto/x509v3/v3err.c
${OPENSSL_SRC}/crypto/x509v3/v3_ocsp.c
${OPENSSL_SRC}/crypto/ripemd/rmd_one.c
${OPENSSL_SRC}/crypto/ripemd/rmd_dgst.c
${OPENSSL_SRC}/engines/ccgost/gost_ameth.c
${OPENSSL_SRC}/engines/ccgost/gost_params.c
${OPENSSL_SRC}/engines/ccgost/e_gost_err.c
${OPENSSL_SRC}/engines/ccgost/gost_crypt.c
${OPENSSL_SRC}/engines/ccgost/gosthash.c
${OPENSSL_SRC}/engines/ccgost/gost_keywrap.c
${OPENSSL_SRC}/engines/ccgost/gost94_keyx.c
${OPENSSL_SRC}/engines/ccgost/gost89.c
${OPENSSL_SRC}/engines/ccgost/gost_pmeth.c
${OPENSSL_SRC}/engines/ccgost/gost_eng.c
${OPENSSL_SRC}/engines/ccgost/gost_asn1.c
${OPENSSL_SRC}/engines/ccgost/gost_md.c
${OPENSSL_SRC}/engines/ccgost/gost2001_keyx.c
${OPENSSL_SRC}/engines/ccgost/gost_sign.c
${OPENSSL_SRC}/engines/ccgost/gost_ctl.c
${OPENSSL_SRC}/engines/ccgost/gost2001.c
${OPENSSL_SRC}/engines/e_ubsec.c
${OPENSSL_SRC}/engines/e_atalla.c
${OPENSSL_SRC}/engines/e_padlock.c
${OPENSSL_SRC}/engines/e_gmp.c
${OPENSSL_SRC}/engines/e_nuron.c
${OPENSSL_SRC}/engines/e_aep.c
${OPENSSL_SRC}/engines/e_4758cca.c
${OPENSSL_SRC}/engines/e_chil.c
${OPENSSL_SRC}/engines/e_sureware.c
${OPENSSL_SRC}/engines/e_capi.c
${OPENSSL_SRC}/engines/e_cswift.c
${OPENSSL_SRC}/ssl/s3_pkt.c
${OPENSSL_SRC}/ssl/d1_meth.c
${OPENSSL_SRC}/ssl/d1_lib.c
${OPENSSL_SRC}/ssl/s23_lib.c
${OPENSSL_SRC}/ssl/s3_enc.c
${OPENSSL_SRC}/ssl/ssl_cert.c
${OPENSSL_SRC}/ssl/tls_srp.c
${OPENSSL_SRC}/ssl/ssl_lib.c
${OPENSSL_SRC}/ssl/s2_lib.c
${OPENSSL_SRC}/ssl/ssl_err.c
${OPENSSL_SRC}/ssl/t1_clnt.c
${OPENSSL_SRC}/ssl/s3_srvr.c
${OPENSSL_SRC}/ssl/t1_meth.c
${OPENSSL_SRC}/ssl/ssl_rsa.c
${OPENSSL_SRC}/ssl/d1_pkt.c
${OPENSSL_SRC}/ssl/bio_ssl.c
${OPENSSL_SRC}/ssl/ssl_algs.c
${OPENSSL_SRC}/ssl/d1_srtp.c
${OPENSSL_SRC}/ssl/s23_pkt.c
${OPENSSL_SRC}/ssl/s2_clnt.c
${OPENSSL_SRC}/ssl/ssl_sess.c
${OPENSSL_SRC}/ssl/kssl.c
${OPENSSL_SRC}/ssl/s3_meth.c
${OPENSSL_SRC}/ssl/ssl_stat.c
${OPENSSL_SRC}/ssl/t1_srvr.c
${OPENSSL_SRC}/ssl/s2_srvr.c
${OPENSSL_SRC}/ssl/s23_clnt.c
${OPENSSL_SRC}/ssl/s3_both.c
${OPENSSL_SRC}/ssl/ssl_asn1.c
${OPENSSL_SRC}/ssl/ssl_err2.c
${OPENSSL_SRC}/ssl/s3_clnt.c
${OPENSSL_SRC}/ssl/t1_reneg.c
${OPENSSL_SRC}/ssl/t1_enc.c
${OPENSSL_SRC}/ssl/d1_both.c
${OPENSSL_SRC}/ssl/d1_srvr.c
${OPENSSL_SRC}/ssl/s3_lib.c
${OPENSSL_SRC}/ssl/s23_meth.c
${OPENSSL_SRC}/ssl/s2_enc.c
${OPENSSL_SRC}/ssl/s2_pkt.c
${OPENSSL_SRC}/ssl/ssl_txt.c
${OPENSSL_SRC}/ssl/d1_clnt.c
${OPENSSL_SRC}/ssl/ssl_ciph.c
${OPENSSL_SRC}/ssl/s23_srvr.c
${OPENSSL_SRC}/ssl/t1_lib.c
${OPENSSL_SRC}/ssl/d1_enc.c
${OPENSSL_SRC}/ssl/s2_meth.c
)

add_library (apr-1 STATIC
deps/src/apr/tables/apr_hash.c
deps/src/apr/tables/apr_tables.c
deps/src/apr/network_io/unix/inet_ntop.c
deps/src/apr/network_io/unix/inet_pton.c
deps/src/apr/network_io/unix/socket_util.c
deps/src/apr/network_io/unix/sockopt.c
deps/src/apr/network_io/unix/sendrecv.c
deps/src/apr/network_io/unix/multicast.c
deps/src/apr/network_io/unix/sockaddr.c
deps/src/apr/network_io/unix/sockets.c
deps/src/apr/file_io/unix/fullrw.c
deps/src/apr/file_io/unix/filedup.c
deps/src/apr/file_io/unix/filepath.c
deps/src/apr/file_io/unix/buffer.c
deps/src/apr/file_io/unix/fileacc.c
deps/src/apr/file_io/unix/dir.c
deps/src/apr/file_io/unix/filepath_util.c
deps/src/apr/file_io/unix/flock.c
deps/src/apr/file_io/unix/copy.c
deps/src/apr/file_io/unix/seek.c
deps/src/apr/file_io/unix/mktemp.c
deps/src/apr/file_io/unix/tempdir.c
deps/src/apr/file_io/unix/pipe.c
deps/src/apr/file_io/unix/open.c
deps/src/apr/file_io/unix/filestat.c
deps/src/apr/file_io/unix/readwrite.c
deps/src/apr/mmap/unix/mmap.c
deps/src/apr/mmap/unix/common.c
deps/src/apr/user/unix/userinfo.c
deps/src/apr/user/unix/groupinfo.c
deps/src/apr/misc/unix/charset.c
deps/src/apr/misc/unix/getopt.c
deps/src/apr/misc/unix/errorcodes.c
deps/src/apr/misc/unix/otherchild.c
deps/src/apr/misc/unix/env.c
deps/src/apr/misc/unix/rand.c
deps/src/apr/misc/unix/start.c
deps/src/apr/misc/unix/version.c
deps/src/apr/shmem/unix/shm.c
deps/src/apr/dso/unix/dso.c
deps/src/apr/memory/unix/apr_pools.c
deps/src/apr/passwd/apr_getpass.c
deps/src/apr/support/unix/waitio.c
deps/src/apr/random/unix/apr_random.c
deps/src/apr/random/unix/sha2_glue.c
deps/src/apr/random/unix/sha2.c
deps/src/apr/locks/unix/thread_rwlock.c
deps/src/apr/locks/unix/proc_mutex.c
deps/src/apr/locks/unix/global_mutex.c
deps/src/apr/locks/unix/thread_cond.c
deps/src/apr/locks/unix/thread_mutex.c
deps/src/apr/atomic/unix/s390.c
deps/src/apr/atomic/unix/mutex.c
deps/src/apr/atomic/unix/builtins.c
deps/src/apr/atomic/unix/ppc.c
deps/src/apr/atomic/unix/ia32.c
deps/src/apr/atomic/unix/solaris.c
deps/src/apr/threadproc/unix/signals.c
deps/src/apr/threadproc/unix/proc.c
deps/src/apr/threadproc/unix/thread.c
deps/src/apr/threadproc/unix/threadpriv.c
deps/src/apr/threadproc/unix/procsup.c
deps/src/apr/strings/apr_snprintf.c
deps/src/apr/strings/apr_strings.c
deps/src/apr/strings/apr_strnatcmp.c
deps/src/apr/strings/apr_cpystrn.c
deps/src/apr/strings/apr_strtok.c
deps/src/apr/strings/apr_fnmatch.c
deps/src/apr/time/unix/timestr.c
deps/src/apr/time/unix/time.c
deps/src/apr/poll/unix/poll.c
deps/src/apr/poll/unix/select.c
deps/src/apr/poll/unix/pollset.c
deps/src/apr/poll/unix/port.c
deps/src/apr/poll/unix/kqueue.c
deps/src/apr/poll/unix/pollcb.c
deps/src/apr/poll/unix/epoll.c
)

#deps/src/apr/exports.c
#deps/src/apr/export_vars.c

# TODO: platform var

add_library (tcnative-1 SHARED
native/os/unix/system.c
native/os/unix/uxpipe.c
native/src/lock.c
native/src/info.c
native/src/os.c
native/src/address.c
native/src/poll.c
native/src/stdlib.c
native/src/jnilib.c
native/src/mmap.c
native/src/proc.c
native/src/sslinfo.c
native/src/file.c
native/src/thread.c
native/src/network.c
native/src/sslutils.c
native/src/sslnetwork.c
native/src/dir.c
native/src/shm.c
native/src/multicast.c
native/src/sslcontext.c
native/src/sslconf.c
native/src/user.c
native/src/pool.c
native/src/bb.c
native/src/misc.c
native/src/ssl.c
native/src/error.c
) 

target_link_libraries(tcnative-1 apr-1)
target_link_libraries(tcnative-1 ssl)
